_sass/main.scss
// 'Permanent Marker', cursive;
// 'Crimson Text', serif;
// 'Open Sans', sans-serif;

// TODO: Update the google fonts to only have Permanent marker and open sans
$bodyFont: "Open Sans", sans-serif;
$headingFont: "Crimson Text", serif;
$accentFont: "Permanent Marker", cursive;

/* Color Theme Swatches in Hex */
$background-color: #f9f8f8;
$text-color: #0d0106;
$accent-color-1: #8c045a;
$accent-color-2: #44ffd1;
$accent-color-3: #6153cc;

/* General Settings */
body {
  font-family: $bodyFont;
  color: $text-color;
  background-color: $background-color;
}

img {
  width: 100%;
  height: auto;
}

#main {
  max-width: 1000px;
  margin: 0px auto;
}

a {
  color: $accent-color-3;
}

a:hover {
  color: $accent-color-1;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $accentFont;
  color: $accent-color-1;
}

/* Specific Settings */
#header-title {
  font-family: $accentFont;
  font-size: 65px;
  color: $accent-color-1;
}

#nav-links {
  a {
    color: $accent-color-1;
    font-size: 20px;
    font-family: $headingFont;
  }
  .nav-current-page {
    font-weight: bold;
    text-transform: uppercase;
  }
}

#footer-bar {
  background-color: $accent-color-1;
  img {
    height: 30px;
    width: auto;
  }
}

